--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,19 @@ services:
     tty: true
     volumes:
       - .:/opt/app
+
+  elasticsearch:
+    image: elasticsearch:8.1.2
+    container_name: i2tf3-elasticsearch
+    ports:
+      - 9200:9200
+    environment:
+      - discovery.type=single-node
+
+  kibana:
+    image: kibana:8.1.2
+    container_name: i2tf3-kibana
+    ports:
+        - 5601:5601
+    environment:
+      - elasticsearch.host="http://localhost:9200"
