--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
       - 9200:9200
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
 
   kibana:
     image: kibana:8.1.2
@@ -23,4 +28,4 @@ services:
     ports:
         - 5601:5601
     environment:
-      - elasticsearch.host="http://localhost:9200"
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
